# spdlog-issue-1562

./: .gitignore  CMakeLists.txt  README.md  main.cpp
spdlog_issue_1562/: spdlog_issue_1562.cpp  spdlog_issue_1562.hpp  spdlog_issue_1562_export.hpp
